# pyrouter_reboot

./: .gitignore  LICENSE  README.md  pyproject.toml  reboot_router.vbs  router_reboot.py  win_notify.py
