[tool.poetry]
name = "pyrouter_reboot"
version = "0.1.0"
description = "A script to reboot router with toast notification"
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.4"
selenium = "^3.141"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
